[gd_scene load_steps=17 format=3 uid="uid://drnka0r15m1h5"]

[ext_resource type="Script" path="res://entities/ghost/ghost.gd" id="1_0bhh2"]
[ext_resource type="Texture2D" uid="uid://d2cpo8mrghh3a" path="res://assets/000.png" id="2_ekrsw"]
[ext_resource type="Script" path="res://components/state_machine/state_machine.gd" id="3_3ql63"]
[ext_resource type="Script" path="res://components/state_machine/retreat_state.gd" id="4_7icx3"]
[ext_resource type="Script" path="res://components/state_machine/idle_state.gd" id="4_fkawd"]
[ext_resource type="Script" path="res://components/state_machine/seek_state.gd" id="5_y4i0s"]
[ext_resource type="Script" path="res://components/state_machine/attack_state.gd" id="6_0e83e"]
[ext_resource type="Script" path="res://components/top_down_holder.gd" id="8_ech6b"]
[ext_resource type="Script" path="res://components/health.gd" id="8_y1vcw"]
[ext_resource type="PackedScene" uid="uid://ddijfxjrhmvlf" path="res://components/skills/cleave/cleave.tscn" id="9_1hien"]
[ext_resource type="Script" path="res://entities/ghost/label.gd" id="10_5iem6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sq7dq"]
radius = 4.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_76jyq"]
radius = 60.0333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_argf6"]
radius = 8.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_toash"]
radius = 2.5
height = 32.0

[sub_resource type="LabelSettings" id="LabelSettings_tep7l"]
font_size = 8

[node name="Ghost" type="CharacterBody2D" node_paths=PackedStringArray("attack")]
z_index = 1
script = ExtResource("1_0bhh2")
attack = NodePath("WeaponHolder/Cleave")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ekrsw")
hframes = 8
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_sq7dq")

[node name="Sight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_76jyq")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true
debug_path_custom_color = Color(1, 0.423529, 1, 1)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("sight")]
script = ExtResource("3_3ql63")
sight = NodePath("../Sight")
initial_state = NodePath("idle_state")

[node name="retreat_state" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("navigationAgent")]
script = ExtResource("4_7icx3")
navigationAgent = NodePath("../../NavigationAgent2D")

[node name="idle_state" type="Node2D" parent="StateMachine"]
script = ExtResource("4_fkawd")

[node name="seek_state" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("navigationAgent", "skills")]
script = ExtResource("5_y4i0s")
navigationAgent = NodePath("../../NavigationAgent2D")
skills = [NodePath("../../WeaponHolder/Cleave")]

[node name="attack_state" type="Node2D" parent="StateMachine"]
script = ExtResource("6_0e83e")

[node name="Health" type="Area2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("8_y1vcw")
actor = NodePath("..")
sensible_types = Array[int]([0])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health"]
shape = SubResource("CapsuleShape2D_argf6")

[node name="WeaponHolder" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("8_ech6b")
actor = NodePath("..")

[node name="Cleave" parent="WeaponHolder" node_paths=PackedStringArray("collisionShape2D", "emitter") instance=ExtResource("9_1hien")]
rotation = -1.1781
speed = 20.0
angle = 67.5
recovery_time = 2.0
collisionShape2D = NodePath("CollisionShape2D")
emitter = NodePath("../..")
damage = 10.0
range = 32.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHolder/Cleave"]
position = Vector2(16, -2.10879e-12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_toash")

[node name="Label" type="Label" parent="." node_paths=PackedStringArray("stateMachine")]
offset_left = -18.0
offset_top = -32.0
offset_right = 22.0
offset_bottom = -9.0
label_settings = SubResource("LabelSettings_tep7l")
horizontal_alignment = 1
script = ExtResource("10_5iem6")
stateMachine = NodePath("../StateMachine")

[connection signal="body_entered" from="Sight" to="StateMachine/idle_state" method="_on_body_entered"]
[connection signal="body_exited" from="Sight" to="StateMachine/seek_state" method="_on_body_exited"]
[connection signal="body_exited" from="Sight" to="StateMachine/attack_state" method="_on_body_exited"]
[connection signal="health_changed" from="Health" to="." method="_on_health_changed"]
[connection signal="skillactived" from="WeaponHolder/Cleave" to="StateMachine/attack_state" method="_on_skillactived"]
[connection signal="skillended" from="WeaponHolder/Cleave" to="StateMachine/attack_state" method="_on_skillended"]
